--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -40,52 +40,9 @@
 }
 
 /*******navigation bar**********/
-.navbar {
-  width: 100%;
-  height: fit-content;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  color: white;
-  padding: 0px 5%;
-  background-color: #265b5f;
-}
-.navbar h2{
-  margin-right: 400px;
-  font-family: 'Mulish', sans-serif;
-  font-size:25px;
-  font-weight: 700;
-  letter-spacing: 2px;
-  color: white;
-}
-
-.navbar-link-left{
-  margin-right: 20px;
-  text-align: center;
-	justify-content: left;
-	border-radius: 8px;
-  text-decoration: none;
-  font-family: 'Quicksand', sans-serif;
-	font-size: 15px;
-	color: white;
-}
-.navbar-link-right{
-  margin-left: 10px;
-  text-align: center;
-	justify-content: right;
-	border-radius: 8px;
-  text-decoration: none;
-  font-family: 'Quicksand', sans-serif;
-	font-size: 15px;
-	color: white;
-}
-.navbar-link-left:hover, .navbar-link-right:hover, .navbar-link-left:focus, .navbar-link-right:focus{
-  background-color: #2098D1;
-  color: white;
-}
 
 /**********table*********************/
 
 .table{
-  margin-top: 20px;
+  margin: 20px, 50px;
 }
