added divider for reviews and css for it

--- a/frontend/src/css/SinglePage.css
+++ b/frontend/src/css/SinglePage.css
@@ -132,15 +132,18 @@ img{
 /**********************Reviews********************/
 
 .reviews{
-    display: flex;
-    justify-content: left;
     margin-top: 1vw;
 }
+
 .reviews h2{
-    display: flex;
-    justify-content: left;
-    margin-left: 200px;
     font-size: 25px;
     font-weight: 800;
     color:#265b5f;
+}
+
+.reviews-title hr {
+   display: inline-block;
+   width: 30%;
+   margin: 5px 10px;
+   border-top: 1px solid #265b5f;
 }
