Refined styling, updated navBar

--- a/frontend/src/css/SinglePage.css
+++ b/frontend/src/css/SinglePage.css
@@ -11,7 +11,8 @@
     color:#265b5f;
 }
 .header h2{
-    margin-left: 50px;
+    margin-left: 40px;
+    margin-top: 0.5vw;
     font-size: 25px;
     color:#265b5f;
 }
