--- a/frontend/src/css/filterBar.css
+++ b/frontend/src/css/filterBar.css
@@ -5,12 +5,14 @@
   position: relative;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 2vw;
   width: 100%;
   height: 7vh;
   align-items: center;
   color: white;
   padding: 0px 1%;
-  justify-content: space-between;
+  
 }
 
 #filter-buttons {
@@ -22,7 +24,7 @@
   align-items: center;
   color: white;
   padding: 0px 2.5%;
-  padding-top: 1vw;
+  padding-top: 2vw;
   justify-content: space-between;
 }
 
