--- a/frontend/src/css/filterBar.css
+++ b/frontend/src/css/filterBar.css
@@ -19,10 +19,28 @@
   display: flex;
   flex-direction: row;
   height: 50%;
+  margin-right: 17%;
   align-items: center;
   color: white;
-  padding: 0px 2.5%;
+  padding: 5px 15px;
   justify-content: space-between;
+}
+
+#difficultyFilter {
+  position:absolute;
+  justify-content: space-between;
+  right: 0;
+  width: 20%;
+  color:#265b5f;
+}
+
+select {
+  color:#265b5f;
+  width: 5vw;
+}
+
+option {
+  padding: 10px;
 }
 
 button {
