Refined css for reviewPage / singlePage

--- a/frontend/src/css/Signup.css
+++ b/frontend/src/css/Signup.css
@@ -14,8 +14,10 @@
     overflow: hidden;
 }
 
-#title {
+#title-signup {
     padding-top: 50px;
+    letter-spacing: 2px;
+    font-size: 40px;
 }
 p{
     font-family: 'Quicksand', sans-serif;
