--- a/frontend/src/css/Review.css
+++ b/frontend/src/css/Review.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 
-.signup-form {
+.review-form {
 	display: flex;
 	align-items: center;
 	width: 700px;
@@ -18,7 +18,6 @@
 	padding-top: 50px;
 	line-height: 50px;
 	letter-spacing: 2px;
-	font-weight: 700;
 	font-size: 40px;
 }
 
@@ -29,46 +28,7 @@ p {
 	color: black;
 }
 
-#cta-type {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	margin-bottom: 20px;
-	align-self: center;
-}
-#cta-type label {
-	margin-left: 10px;
-	margin-right: 20px;
-	font-family: "Quicksand", sans-serif;
-	font-style: normal;
-	font-weight: 500;
-	font-size: 20px;
-	letter-spacing: 0.05em;
-	color: #7e7c7c;
-}
-
-.input-name {
-	display: flex;
-	margin-top: 20px;
-}
-#first-name {
-	margin-left: 35px;
-	padding-right: 80px;
-	font-family: "Quicksand", sans-serif;
-	font-weight: 700;
-	font-size: 20px;
-	letter-spacing: 2px;
-	color: #7e7c7c;
-}
-#last-name {
-	padding-left: 50px;
-	font-family: "Quicksand", sans-serif;
-	font-weight: 700;
-	font-size: 20px;
-	letter-spacing: 2px;
-	color: #7e7c7c;
-}
-#input {
+#input-name {
 	display: flex;
 	margin-top: 20px;
 	margin-left: 35px;
@@ -82,8 +42,6 @@ p {
 #hike-title {
 	display: flex;
 	margin-top: 20px;
-	margin-left: 35px;
-	padding-right: 80px;
 	font-family: "Quicksand", sans-serif;
 	font-weight: 700;
 	font-size: 20px;
@@ -118,10 +76,7 @@ input[type="password"]:focus {
 input[type="checkbox"] {
 	-webkit-transform: scale(1.3);
 	transform: scale(1.3);
-}
-
-input[type="radio"] {
-	justify-content: center;
+	margin-right: 20px;
 }
 
 .account-info {
@@ -138,8 +93,6 @@ input[type="radio"] {
 #review-button {   
 	overflow: hidden;
 	padding: 12px 17px;
-   /* TODO: Hardcoded value. Looks good on screen 1450px */
-   margin-left: 300px;
 	border: none;
 	font-weight: 600;
 	font-size: 16px;
@@ -151,59 +104,24 @@ input[type="radio"] {
 	color: white;
 }
 
-.volunteer-type {
-	margin-top: 20px;
-}
-.volunteer-type p {
-	display: flex;
-	margin-left: 35px;
-}
-.volunteer-text {
-	display: flex;
-	margin-top: 20px;
-	margin-left: 100px;
-}
-#driver-text {
-	padding-left: 10px;
-	margin-right: 80px;
-	font-family: "Quicksand", sans-serif;
-	font-weight: 700;
-	font-size: 20px;
-	letter-spacing: 2px;
-	color: white;
-}
-#kitchen-text {
-	padding-left: 10px;
-	padding-right: 15px;
-	font-family: "Quicksand", sans-serif;
-	font-weight: 700;
-	font-size: 20px;
-	letter-spacing: 2px;
-	color: #7e7c7c;
-}
-
 .signup-error {
 	margin: 20px 0px -10px;
 	color: rgb(241, 80, 80);
 	font-size: 17px;
 }
 
-.drop-down-site {
-	margin-left: 0px;
-	padding-right: 0px;
-	font-family: "Quicksand", sans-serif;
-	font-weight: 700;
-	font-size: 20px;
-	letter-spacing: 2px;
-	color: #7e7c7c;
+#id
+{
+	padding-left: -50px;
 }
 
-#select-site {
-	margin-left: 0px;
-	padding-right: 0px;
-	font-family: "Quicksand", sans-serif;
-	font-weight: 700;
-	font-size: 20px;
-	letter-spacing: 2px;
-	color: #7e7c7c;
+#difficulty-rating
+{
+	width: 70px;
+	margin-left: -50px;
+}
+#accessibility-rating
+{
+	width: 70px;
+	margin-left: -50px;
 }
