Logout func and prettier

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 
 .App {
   text-align: center;
@@ -39,6 +39,6 @@
   }
 }
 
-.table{
+.table {
   margin: 20px, 50px;
 }
