--- a/frontend/src/css/WeatherWidget.css
+++ b/frontend/src/css/WeatherWidget.css
@@ -1,15 +1,15 @@
 .boxed {
-    box-sizing: content-box;
-    width: 100%;
-    border: solid black 1px;
-    padding: 15px;
-    border-radius: 25px;
+  box-sizing: content-box;
+  width: 100%;
+  border: solid black 1px;
+  padding: 15px;
+  border-radius: 25px;
 }
 
-h3{
-    justify-content: center;
-    text-align: center;
-    font-family: 'Mulish', sans-serif;
-    font-size: 25px;
-    color:#265b5f;
+h3 {
+  justify-content: center;
+  text-align: center;
+  font-family: "Mulish", sans-serif;
+  font-size: 25px;
+  color: #265b5f;
 }
