--- a/frontend/src/css/navbar copy.css
+++ b/frontend/src/css/navbar copy.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 nav {
   position: relative;
@@ -22,10 +22,11 @@ nav > div {
 h2 {
   margin-left: 7.5%;
 }
-h2, .logo, 
+h2,
+.logo,
 .logo:visited,
 .logo.acitve,
-.logo:focus, 
+.logo:focus,
 .logo:hover {
   text-decoration: none;
   font-family: "Mulish", sans-serif;
@@ -33,10 +34,10 @@ h2, .logo,
   font-weight: 700;
   letter-spacing: 2px;
   color: white;
-
 }
 
-a.nav-link, a.nav-button,
+a.nav-link,
+a.nav-button,
 a.nav-link:visited,
 a.nav-link:active,
 a.nav-link:focus {
@@ -45,7 +46,6 @@ a.nav-link:focus {
   font-size: 15px;
   color: white;
 }
-
 
 #nav-left {
   left: 0;
@@ -61,7 +61,7 @@ a.nav-link:focus {
 #nav-right a {
   border: 2px solid white;
   border-radius: 5vw;
-  padding: 2px 15px; 
+  padding: 2px 15px;
 }
 
 a.nav-link:hover {
@@ -71,7 +71,7 @@ a.nav-link:hover {
 }
 
 #nav-right a:hover {
- background-color: orange; 
- color: #265b5f;
- border-color: none;
+  background-color: orange;
+  color: #265b5f;
+  border-color: none;
 }
