--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 nav {
   position: relative;
@@ -24,10 +24,11 @@ h2 {
   margin-left: 7.5%;
 }
 
-h2, .logo, 
+h2,
+.logo,
 .logo:visited,
 .logo.acitve,
-.logo:focus, 
+.logo:focus,
 .logo:hover {
   text-decoration: none;
   font-family: "Mulish", sans-serif;
@@ -35,10 +36,10 @@ h2, .logo,
   font-weight: 700;
   letter-spacing: 2px;
   color: white;
-
 }
 
-a.nav-link, a.nav-button,
+a.nav-link,
+a.nav-button,
 a.nav-link:visited,
 a.nav-link:active,
 a.nav-link:focus {
@@ -62,19 +63,18 @@ a.nav-link:focus {
 #nav-right a {
   border: 2px solid white;
   border-radius: 5vw;
-  padding: 2px 15px; 
+  padding: 2px 15px;
 }
 
 a.nav-link:hover,
-a.nav-link:focus
-{
+a.nav-link:focus {
   color: orange;
   transition: ease-in 0.1s;
   text-decoration: none;
 }
 
 #nav-right a:hover {
- background-color: orange; 
- color: #265b5f;
- border-color: none;
+  background-color: orange;
+  color: #265b5f;
+  border-color: none;
 }
