--- a/frontend/src/css/SinglePage.css
+++ b/frontend/src/css/SinglePage.css
@@ -5,7 +5,7 @@
 }
 .header h1 {
   margin-left: 10vw;
-  font-family: "Mulisih", sans-serif;
+  font-family: "Mulish", sans-serif;
   font-size: 30px;
   font-weight: 800;
   color: #265b5f;
@@ -70,6 +70,8 @@ img {
   border-width: 3px;
   border-radius: 10px;
   border-color: #10a5f5;
+  font-family: sans-serif;
+  font-weight: 500;
   color: #10a5f5;
 }
 #rating {
@@ -153,11 +155,12 @@ img {
   justify-content: right;
   padding: 0.75rem 1.25rem;
   width: 150px;
+  height: 60px;
   margin-left: 30%;
   vertical-align: middle;
   font-weight: 600;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 1rem;
+  font-family: "Mulish", sans-serif;
+  font-size: 25px;
   text-transform: none;
   text-align: center;
   text-decoration: none;
@@ -167,10 +170,43 @@ img {
   color: #ffffff;
   cursor: pointer;
   line-height: 1;
+  white-space: nowrap;
 }
 
 #review-button:hover {
   background-color: #5ac0c2;
+  color: white;
+  text-decoration: none;
+}
+
+/****************Save Hike********************/
+#save-hike {
+  -webkit-appearance: none;
+  display: inline-flex;
+  justify-content: center;
+  width: 180px;
+  height: 60px;
+  margin-left: 50px;
+  font-weight: 600;
+  text-transform: none;
+  text-decoration: none;
+  white-space: nowrap;
+  border: none;
+  border-radius: 10px;
+  background: #1499e4;
+  cursor: pointer;
+}
+#save-hike p {
+  font-family: "Mulish", sans-serif;
+  font-size: 20px;
+  margin-left: 10px;
+  color: #ffffff;
+}
+#save-hike img {
+  border-radius: 0%;
+}
+#save-hike:hover {
+  background-color: #148bcf;
   color: white;
   text-decoration: none;
 }
