updated difficulty rating

--- a/frontend/src/css/SinglePage.css
+++ b/frontend/src/css/SinglePage.css
@@ -61,16 +61,32 @@ img {
   align-items: center;
   justify-content: space-evenly;
 }
-.difficulty {
-  font-size: 25px;
-  box-sizing: border-box;
-  padding: 2px 10px;
+.difficulty-box {
+  display: inline-block;
+  padding: 5px 10px;
+  box-sizing: content-box;
   border: solid;
   border-width: 3px;
   border-radius: 10px;
   border-color: #10a5f5;
-  font-family: sans-serif;
-  font-weight: 500;
+  color: #10a5f5;
+}
+#difficulty {
+  display: inline-block;
+  white-space: nowrap;
+  margin: 0px 9px 0px 0px;
+  font-family: "Quicksand", sans-serif;
+  font-size: 25px;
+  font-weight: 800;
+  color: #10a5f5;
+}
+#diff-num {
+  display: inline-block;
+  margin: 0px;
+  white-space: nowrap;
+  font-family: "Quicksand", sans-serif;
+  font-size: 25px;
+  font-weight: 800;
   color: #10a5f5;
 }
 #rating {
