--- a/frontend/src/css/WeatherWidget.css
+++ b/frontend/src/css/WeatherWidget.css
@@ -1,9 +1,8 @@
 .boxed {
   box-sizing: content-box;
-  width: 100%;
   border: solid black 1px;
-  padding: 15px;
   border-radius: 25px;
+  width: 100%;
 }
 
 h3 {
@@ -12,4 +11,16 @@ h3 {
   font-family: "Mulish", sans-serif;
   font-size: 25px;
   color: #265b5f;
+}
+
+#weather-info {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#weather-info > div {
+  white-space: nowrap;
+  flex: 2 1 150px;
+  margin-bottom: 10px;
+  margin-right: 15px;
 }
