--- a/frontend/src/css/filterBar.css
+++ b/frontend/src/css/filterBar.css
@@ -5,7 +5,6 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   margin-bottom: 2vw;
   width: 100%;
   height: 7vh;
@@ -15,24 +14,21 @@
 }
 
 #filter-buttons {
-  position: absolute;
-  right: 0;
+  position: static;
   display: flex;
-  flex-direction: row;
+  justify-content: flex-end;
+  margin-left: auto;
   height: 50%;
   align-items: center;
   color: white;
   padding-top: 2vw;
   padding-right: 1vw;
-  justify-content: space-between;
 }
 
 #sort-drop {
-  position: absolute;
-  justify-content: space-between;
-  left: 20vw;
+  position: static;
+  margin-left: 1vw;
   padding-top: 2.5vw;
-  /* width: 20%; */
   color: #265b5f;
 }
 
